# softmatics

./: .gitignore  CLAUDE.md  README.md
.claude/agents/: architect.md  debugger.md  developer.md  tester.md
softmatics/: CMakeLists.txt  package.xml
softmatics_control/: CMakeLists.txt  package.xml
softmatics_description/: CMakeLists.txt  README.md  package.xml  visualize.rviz
softmatics_description/launch/: disp_softmatics_model.launch
softmatics_description/meshes/collision/: base.stl  finger.stl
softmatics_description/meshes/visual/: palm.stl  root.stl
softmatics_description/urdf/: softmatics.xacro  softmatics_gazebo.xacro  softmatics_model.xacro  softmatics_model_macro.xacro  softmatics_transmission.xacro
softmatics_device/: CMakeLists.txt  package.xml
softmatics_device/launch/: trigger.launch
softmatics_device/nodes/: trigger.py
softmatics_device/sketch/: sketch.ino
softmatics_gazebo/: CMakeLists.txt  package.xml
softmatics_gazebo/config/: control_params.yaml
softmatics_gazebo/launch/: bringup_softmatics_gazebo.launch
softmatics_visualization/: CMakeLists.txt  README.md  package.xml  visualize.rviz
softmatics_visualization/launch/: disp_softmatics_model.launch
softmatics_visualization/urdf/: softmatics.xacro  softmatics_model.xacro  softmatics_model_macro.xacro  softmatics_transmission.xacro
