<?xml version="1.0"?>
<package format="3">
  <name>softmatics</name>
  <version>1.0.0</version>
  <description>ROS driver for SOFTmatics gripper</description>
  <maintainer email="taku8926@gmail.com">Takuya Kiyokawa</maintainer>
  <author email="taku8926@gmail.com">Takuya Kiyokawa</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
