<?xml version="1.0"?>
<package format="2">
  <name>softmatics_control</name>
  <version>1.0.0</version>
  <description>The softmatics_control package</description>
  <license>MIT</license>
  <author email="taku8926@gmail.com">Takuya Kiyokawa</author>
  <maintainer email="taku8926@gmail.com">Takuya Kiyokawa</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
</package>